# scratch-cmake

./: .gitignore  CMakeLists.txt  README.md
project-lib/: CMakeLists.txt  lib.cpp  lib.hpp
project-test/: CMakeLists.txt  test.cpp
project-tool/: CMakeLists.txt  main.cpp
